src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Cohort__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for MonTRACK functionality; captures the cohort to which a student belongs</description>
        <label>Cohort</label>
        <referenceTo>Cohort__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Id__c</fullName>
        <description>used to map back to original UniCRM records post data migration</description>
        <externalId>true</externalId>
        <label>Original Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for MonTRACK functionality; SSA is the Student Success Advisor who calls the student in the MonTRACK program.</description>
        <label>SSA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>